# projeto_asteroide

./: CMakeLists.txt  README.md  glad.c  imgui.ini  main.cpp  projeto_asteroide.sln  projeto_asteroide.vcxproj  projeto_asteroide.vcxproj.filters
shaders/: Shader.cpp  Shader.h  fragment_shader.glsl  sprite.frag  star.frag  vertex_shader.glsl
src/audio/: Audio.cpp  Audio.h
src/controles/: Controles.cpp  Controles.h
src/entidades/Missil/: Missil.cpp  Missil.h  Projectile.cpp  Projectile.h
src/entidades/asteroides/: Asteroid.cpp  Asteroid.h  Asteroide.cpp  Asteroide.h  asteroide.cpp  asteroide.h
src/entidades/colisao/: Colisao.cpp  Colisao.h  CollisionManager.cpp  CollisionManager.h
src/entidades/estrelas/: Estrelas.cpp  Estrelas.h  StarSystem.cpp  StarSystem.h
src/entidades/nave/: Nave.cpp  Nave.h  Ship.cpp  Ship.h  nave.cpp  nave.h
src/jogo/: GameManager.cpp  GameManager.h  Jogo.cpp  Jogo.h  Pontuacao.cpp  Pontuacao.h
src/mapa/: Mapa.cpp  Mapa.h  mapa.cpp  mapa.h
src/menu/: Menu.cpp  Menu.h  menu.cpp  menu.h
src/recursos/: GerenciadorAsteroides.cpp  GerenciadorAsteroides.h  GerenciadorTextura.cpp  GerenciadorTextura.h  GerenciadorTexturas.cpp  GerenciadorTexturas.h  TextureManager.cpp  TextureManager.h  stb_image.cpp
